fix postman tests